--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,14 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=10.30.14.36
 DB_PORT=5432
 DB_DATABASE=chat_bot_be
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=postgres
+DB_PASSWORD=nutanix4u123
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
