feat: enhance file upload capabilities with PHP configuration for large files

--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,22 @@
+# PHP Configuration for large file uploads
+php_value upload_max_filesize 100M
+php_value post_max_size 100M
+php_value memory_limit 256M
+php_value max_execution_time 300
+php_value max_input_time 300
+php_value max_file_uploads 20
+
+# Standard Laravel .htaccess rules
 <IfModule mod_rewrite.c>
     <IfModule mod_negotiation.c>
-        Options -MultiViews -Indexes
+        Options -MultiViews
     </IfModule>
 
     RewriteEngine On
 
-    # PHP Upload Configuration for Large Files
-    php_value upload_max_filesize 100M
-    php_value post_max_size 100M
-    php_value memory_limit 256M
-    php_value max_execution_time 300
-    php_value max_input_time 300
-
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
     RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-
-    # Handle X-XSRF-Token Header
-    RewriteCond %{HTTP:x-xsrf-token} .
-    RewriteRule .* - [E=HTTP_X_XSRF_TOKEN:%{HTTP:X-XSRF-Token}]
 
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
